# ML-DL-implementations

./: .gitignore  README.md  pyproject.toml
algorithms/: artificial-nn.ipynb  cnn-from-scratch.ipynb  dbscan.ipynb  hierarchical-clustering.ipynb  iris_classifier._state.pt  kmeans-clustering.ipynb  linear-regression.ipynb  polynomial-regression.ipynb  pytorch.ipynb  recurrent-layer.ipynb  xor-classification.ipynb
miniprojects/: character-level-modeling.ipynb  imdb-sentiment-rnn.ipynb  mileage-prediction.ipynb  mnist-classification.ipynb  smile_classification.ipynb
