[tool.poetry]
name = "ml-dl-from-scratch"
version = "0.1.0"
description = "Implementations of ML & DL algorithms from scratch"
authors = ["Subash Pandey <axlesubash111@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.3"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
